--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "cmdk": "^0.2.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.330.0",
+    "mongoose": "^8.1.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
