--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
+# MONGO=mongodb://127.0.0.1:27017/mymarketplace
+
 GOOGLE_CLIENT_ID=10677253194-tsg4d2avaaeav6p5jv6m40olfe9v23cd.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+FACEBOOK_CLIENT_ID='7438093236242895'
+FACEBOOK_CLIENT_SECRET='45b6ac3e64fd4544cef8d1b778255997'
 NEXTAUTH_SECRET="ebisagirmaelsabetawrarisisayasmelkamu"
 NEXTAUTH_URL="http://localhost:3000"
