--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
