--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
-# MONGO=mongodb://127.0.0.1:27017/mymarketplace
+# MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
+MONGO=mongodb://127.0.0.1:27017/mymarketplace
 
 GOOGLE_CLIENT_ID=10677253194-tsg4d2avaaeav6p5jv6m40olfe9v23cd.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
