--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-table": "^8.11.8",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "buffer-to-stream": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
