--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -38,10 +39,11 @@
     "mongoose": "^8.1.2",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-cloudinary": "^6.3.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^2.0.13",
