--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ NEXTAUTH_URL=http://localhost:3000
 
 
 
-MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
+# MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
 
-# MONGO=mongodb+srv://isayas:isayas71@shop.acgqre4.mongodb.net/marketplace?retryWrites=true&w=majority&appName=shop
+MONGO=mongodb+srv://isayas:isayas71@shop.acgqre4.mongodb.net/marketplace?retryWrites=true&w=majority&appName=shop
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dwujviuby
 CLOUD_KEY=697344684852634
 CLOUD_KEY_SECRET=rWfx2mkXT6sDuPVwqgq615RSlmc
