--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^2.0.13",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "timeago.js": "^4.0.2",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
