--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=7438093236242895
 FACEBOOK_CLIENT_SECRET=45b6ac3e64fd4544cef8d1b778255997
 NEXTAUTH_SECRET=ebisagirmaelsabetawrarisisayasmelkamu
-NEXTAUTH_URL=http://10.194.65.25:3000
+NEXTAUTH_URL=http://localhost:3000
 
 # MONGO=mongodb+srv://isayas:isayas71@shop.acgqre4.mongodb.net/marketplace?retryWrites=true&w=majority&appName=shop
 # MONGO=mongodb://127.0.0.1:27017/mymarketplace
