--- a/.env
+++ b/.env
@@ -8,15 +8,15 @@ NEXTAUTH_URL=http://localhost:3000
 # MONGO=mongodb+srv://isayas:isayas71@shop.acgqre4.mongodb.net/marketplace?retryWrites=true&w=majority&appName=shop
 # MONGO=mongodb://127.0.0.1:27017/mymarketplace
 
-MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/?retryWrites=true&w=majority
+MONGO=mongodb+srv://marketplace:marketplace@cluster0.qp0lqio.mongodb.net/marketplace?retryWrites=true&w=majority
 
 
-# NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dwujviuby
-# CLOUD_KEY=697344684852634
-# CLOUD_KEY_SECRET=rWfx2mkXT6sDuPVwqgq615RSlmc
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dwujviuby
+CLOUD_KEY=697344684852634
+CLOUD_KEY_SECRET=rWfx2mkXT6sDuPVwqgq615RSlmc
 
 
 
-CLOUD_NAME=djzu5pkhv
-CLOUD_KEY=987432744644647
-CLOUD_KEY_SECRET=S-HGrERUhs--9abfINx2JWs2CTE
+# CLOUD_NAME=djzu5pkhv
+# CLOUD_KEY=987432744644647
+# CLOUD_KEY_SECRET=S-HGrERUhs--9abfINx2JWs2CTE
