--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^0.2.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.330.0",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
