--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -50,6 +53,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-resizable-panels": "^2.0.13",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
