--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^2.0.13",
     "socket.io-client": "^4.7.5",
+    "source-map-js": "^1.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "timeago.js": "^4.0.2",
