--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
